# wechat-article-generator

./: .env.example  .gitignore  README.md  SKILL.md  minecraft_article.md  pyproject.toml
persona/: tech_fast_food.md
scripts/: md_to_html.py
templates/: wechat_style.css
